# laughtale

./: Cargo.toml
src/: main.rs
