[package]
name = "laughtale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
collapse = "0.1.2"
reqwest = {version = "0.11", features = ["blocking", "json"]}
scraper = "0.12.0"
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }